--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,19 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "angular-loader": "~1.5.0",
-    "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "jquery": "~2.1.4",
+    "angular": "~1.4.7",
+    "angular-animate": "~1.4.7",
+    "angular-foundation": "~0.8.0",
+    "angular-velocity-revival": "~0.3.3",
+    "angular-route": "~1.4.7",
+    "velocity": "~1.2.2",
+    "scrollmagic": "~2.0.5",
+    "foundation": "5.5.2",
+    "slick-carousel": "1.5.8",
+    "sweetalert": "1.1.0",
+    "animate.css": "animate-css#3.5.1",
+    "font-awesome": "4.5.0",
+    "lodash": "4.8.2"
   }
 }
