--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "gulp-concat": "2.6.0",
     "gulp-svg-sprite": "^1.3.1",
     "http-server": "^0.9.0",
-    "shelljs": "^0.6.0"
+    "shelljs": "^0.6.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-sass": "^2.1.0"
+
   },
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1 ./app",
+    "start": "http-server -a localhost -p 8000 -c-1 ./dist",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run",
