--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "velocity": "~1.2.2",
     "scrollmagic": "~2.0.5",
     "foundation": "5.5.2",
+    "foundation-sites": "6.2.3",
     "slick-carousel": "1.5.8",
     "sweetalert": "1.1.0",
     "animate.css": "animate-css#3.5.1",
