--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "babel-preset-es2015": "^6.9.0",
     "bower": "^1.7.7",
     "gulp": "^3.9.1",
+    "gulp-add-src": "^0.2.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "6.1.2",
     "gulp-concat": "2.6.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-minifier": "^0.1.4",
+    "gulp-sass": "^2.1.0",
     "gulp-svg-sprite": "^1.3.1",
     "http-server": "^0.9.0",
-    "shelljs": "^0.6.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0"
-
+    "shelljs": "^0.6.0"
   },
   "scripts": {
     "postinstall": "bower install",
